# xpact

./: .gitignore  README.md  sonar-project.properties  xpact.ecf
adapters/libexpat/: CMakeLists.txt  README.md  expected-failures.tsv  parity.tsv  xpact_test_shims.c
adapters/libexpat/include/: expat.h  expat_config.h
benchmarks/: libexpat_c_benchmark.c  libexpat_py_benchmark.py  xp_benchmark_root.e  xpact_benchmarks.ecf  xpact_native_c_benchmark.c
ci/: Jenkinsfile.all-tests  Jenkinsfile.windows-phase1
docs/: article-reading-guide.md  benchmarks.md  chunked-parse-crc.md  design-overview.md  drop-in-verification.md  expat-c-code-investigation.md  expat-port-spike.md  incremental-core-prototype.md  incremental-shim-audit.md  large-xml-benchmarks.md  libexpat-api-compatibility.md  libexpat-parity.md  performance-analysis.md  phase-1.md  platform-builds.md  test-matrix.md  windows-release.md
docs/bon/: xpact-native-bridge.bon  xpact-parser-core.bon  xpact-verification.bon
examples/contributed/: README.md
include/: xpact.h
native/: README.md  xpact_eiffel_bridge.h  xpact_eiffel_dllmain.c  xpact_eiffel_runtime_bridge.c  xpact_eiffel_runtime_bridge.h  xpact_native.c  xpact_native_private.h
scripts/: build_native.ps1  build_native_eiffel.ps1  import_msvc_environment.ps1  package_windows_release.ps1  run_benchmarks.ps1  run_chunked_crc_corpus.ps1  run_chunked_crc_harness.ps1  run_contributed_examples.ps1  run_eiffel_test_matrix.ps1  run_incremental_shim_audit.ps1  run_large_xml_benchmarks.ps1  run_libexpat_adapter.ps1  run_native_abi_tests.ps1  run_native_runtime_smoke.ps1  run_phase1.ps1
src/: xp_attribute_decl.e  xp_attributes.e  xp_cli.e  xp_event_handler.e  xp_expat_api.e  xp_expat_port_parse_session.e  xp_external_entity.e  xp_external_entity_policy.e  xp_external_entity_resolver.e  xp_gc_critical_section.e  xp_incremental_parse_session.e  xp_limits.e  xp_native_bridge_export.e  xp_native_bridge_installer.e  xp_native_callback_handler.e  xp_native_library_root.e  xp_native_parser.e  xp_null_event_handler.e  xp_parser.e  xp_token_slice.e
tests/: xp_collecting_handler.e  xp_native_runtime_smoke.e  xp_position_collecting_handler.e  xp_test_external_entity_resolver.e  xp_test_root.e  xpact_autotest.ecf  xpact_native_library.ecf  xpact_native_runtime.ecf  xpact_tests.ecf
tests/autotest/: autotest.e  xp_generated_attribute_tests.e  xp_generated_content_model_tests.e  xp_generated_parser_tests.e  (+1 more)
(+12 files in other folders)
